src/Dialogues/Friends.css
#friends {
    padding: 0;
    display: flex;
    flex-direction: column;
    height: 100%;
    
    h1 {
        vertical-align: text-top;
        display: flex;
        justify-content: space-between;

        span {
            display: flex;
            overflow: hidden;
            margin-right: .2em;
        }
    }  
    menu {
        right: 30px;
    } 

    input {
        display: block;
        width: 100%;
        padding: 5px;
    }

    ul {
        list-style: none;
        padding: 0;
        margin-bottom: 0;
        li {
            display: flex;
            align-items: center;
            margin-bottom: 1em;
            gap: 10px;
            div {
                overflow: hidden;
            }
            h3 {
                margin: 0;
                overflow: hidden;
                text-overflow: ellipsis;
                img {
                    margin-right: 1em;

                }
            }
        }
    }
}

